--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    font-family: 'Lato', sans-serif;
+    background-color: #eeeeee;
+}
+
 
 
 
