--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html, body {
+    width: 100%;
+    height: 100%;
     font-family: 'Lato', sans-serif;
-    background-color: #eeeeee;
-}
-
-
-
-
+    background-color: #f8fafc;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+  }
